--- a/themes/centro/screen.css
+++ b/themes/centro/screen.css
@@ -71,19 +71,23 @@ a:hover {
 	width: 900px;
 	height: 100px;
 	margin: 0;
-	background: url(images/img05.jpg) no-repeat left 25px;
 	color: #FFFFFF;
 }
-
+#logo img{
+  padding-top: 25px;
+  padding-left: 10px;
+  letter-spacing: -1px;
+  float:left;
+}
 #logo h1, #logo p {
-	margin: 0;
-	padding: 0;
+	margin: 10;
+	padding: 10;
 	text-transform: uppercase;
  }
 
 #logo h1 {
 	padding-top: 25px;
-	padding-left: 60px;
+	padding-left: 80px;
 	letter-spacing: -1px;
 	font-size: 2.2em;
 	font-weight: bold;
